  note otherwise.  Whether your name & email is actually listed depends
  on how extensive the change.  (If it's a minor code, document change,
  or spelling correction your name will probably not be listed.)

****************************   Release 1.1 ******************************
pam-script 1.1.4		Jeroen Nijhof	<jeroen@nijhofnet.nl>
	* fixed bug 2871389 - pam_sm_chauthtok() should first set
	  PAM_OLDAUTHTOK and not PAM_AUTHTOK. PAM_AUTHTOK should
	  contain the new password.
	* pam_sm_chauthtok() - Don't ask current password for user root.

pam-script 1.1.3		R.K. Owen	<rkowen@nersc.gov>
	* fixed bugs 2787860 - extra echo in driver script &
	* 2784468 - leaked PAM_* env.vars. (thanks to yvan-seth)

pam-script 1.1.2
Apr 14, 2009			Jeroen Nijhof	<jeroen@nijhofnet.nl>
	* Official release of pam-script 1.1.2

pam-script 1.1.2
Oct 21, 2008			Jeroen Nijhof	<jeroen@nijhofnet.nl>
	* Added converse functionality.

pam-script 1.1.2
May 22, 2008			R.K. Owen	<rkowen@nersc.gov>
	* Added the pam_script driver script and the ./pam-script.d/
	  directory for an easy way for other packages to include
	  PAM capability via pam-script (suggested by Petter Reinholdtsen).
	* Further improvements in the Debian/Ubuntu packaging.

pam-script 1.1.1
Feb  5, 2008			R.K. Owen	<rkowen@nersc.gov>
	* conditional sections need to be after including config.h .
	* improved the Debian/Ubuntu package build instructions.

pam-script 1.1.0
Dec 12, 2007			R.K. Owen	<rkowen@nersc.gov>
	* sources put under the GNU autotools: automake,libtool,autoconf.
	* test whether the pam-script exists and is executable.
	* added the pam.conf configure option - onerr=(success|fail)
	  to set the default behavior when the script test fails.
	* added the pam.conf configure option - dir=/some/path/ to specify
	  an alternative directory of where to look for the scripts.
	* set several PAM_* environment variables and pass them to
	  the scripts.
	* pass the pam_script.so arguments to the script's command line.