@@ -1,1 +1,1 @@
-debian/pam-script.7
+pam-script.7
